--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -4,3 +4,9 @@
 <% if @event.attendees.include?(current_user) %>
  <%= button_to "Attend Event", attendances_path %>
 <% end %>
+
+<% if user_signed_in?  %>
+  <%= link_to "Sign Out", destroy_user_session_path, 'data-turbo-method': :delete %>
+<% else %>
+  <%= link_to "Sign in", new_user_session_path %>
+<% end %>
