--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,3 +5,9 @@
     <%= link_to event.title, event %>
   </div>
 <% end %>
+
+<% if user_signed_in?  %>
+  <%= link_to "Sign Out", destroy_user_session_path, 'data-turbo-method': :delete %>
+<% else %>
+  <%= link_to "Sign in", new_user_session_path %>
+<% end %>
