--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -7,3 +7,9 @@
     </li>
   <% end %>
 </ul>
+
+<% if user_signed_in?  %>
+  <%= link_to "Sign Out", destroy_user_session_path, 'data-turbo-method': :delete %>
+<% else %>
+  <%= link_to "Sign in", new_user_session_path %>
+<% end %>
