--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -7,6 +7,10 @@
     </li>
   <% end %>
 </ul>
+<% if user_signed_in? %>
+  <br>
+    <%= button_to "Create New Event", new_event_path, method: :get %>
+<% end %>
 
 <% if user_signed_in?  %>
   <%= link_to "Sign Out", destroy_user_session_path, 'data-turbo-method': :delete %>
