fix(event): fix bug where attend button wouldn't show up

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,8 +1,10 @@
 <h1><%= @event.title %></h1>
 <p><%= @event.body %></p>
 
-<% if @event.attendees.include?(current_user) %>
- <%= button_to "Attend Event", attendances_path %>
+<% unless @event.attendees.include?(current_user) %>
+  <% unless current_user == @event.creator %>
+    <%= button_to "Attend Event", attendances_path %>
+  <% end %>
 <% end %>
 
 <% if user_signed_in?  %>
