--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -3,7 +3,7 @@
 
 <% unless @event.attendees.include?(current_user) %>
   <% unless current_user == @event.creator %>
-    <%= button_to "Attend Event", attendances_path %>
+    <%= button_to "Attend Event", attendances_path, params: { event_id: @event.id } %>
   <% end %>
 <% end %>
 
