--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,6 +6,15 @@
   </div>
 <% end %>
 
+<div>
+  <h3>Attended Events:</h3>
+  <ul>
+    <% @user.attended_events.each do |att_event| %>
+      <li><%= link_to att_event.title, att_event %></li>
+    <% end %>
+  </ul>
+</div>
+
 <% if user_signed_in?  %>
   <%= link_to "Sign Out", destroy_user_session_path, 'data-turbo-method': :delete %>
 <% else %>
