--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,5 +1,6 @@
 <h1><%= @event.title %></h1>
 <p><%= @event.body %></p>
+<h4>Date: <%= @event.date %></h4>
 
 <% unless @event.attendees.include?(current_user) %>
   <% unless current_user == @event.creator %>
