--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -4,6 +4,10 @@
 
 <% if @event.creator == current_user %>
   <%= link_to "Edit Event", edit_event_path(@event) %>
+  <%= link_to "Delete Event", event_path(@event), data: {
+    turbo_method: :delete,
+    turbo_confirm: "Are you sure?"
+  } %>
 <% end %>
 
 <% unless @event.attendees.include?(current_user) %>
