--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -15,6 +15,15 @@
     <%= button_to "Attend Event", attendances_path, params: { event_id: @event.id } %>
   <% end %>
 <% end %>
+
+<% if @event.attendees.include?(current_user) %>
+  <%= button_to "Cancel Attendance", attendance_path,
+                params: { event_id: @event.id },
+                method: :delete,
+                data: { turbo_confirm: "Are you sure?" }
+  %>
+<% end %>
+
 <div>
   <h3>Attendees:</h3>
   <ul>
